--- a/rapporter/Better Thesis/main.tex
+++ b/rapporter/Better Thesis/main.tex
@@ -16,7 +16,8 @@
 \usepackage{float}
 \usepackage[utf8]{inputenc}
 \usepackage{csquotes}
-\usepackage{cleveref}
+%\usepackage{cleveref}
+\usepackage[capitalise]{cleveref}
 \usepackage{mathtools}
 \usepackage{parskip}
 \usepackage{placeins}
