--- a/rapporter/Better Thesis/svensk-sammanfattning.tex
+++ b/rapporter/Better Thesis/svensk-sammanfattning.tex
@@ -1,1 +1,1 @@
-När forensiker försöker identifiera förövaren till ett brott använder de individuella ansiktsmärken när de jämför den misstänkta med förövaren. Ansiktsmärken används ofta vid identifikation och de lokaliseras idag manuellt. För att skynda på denna process, är det önskvärt att detektera ansiktsmärken automatiskt. Detta examensarbete beskriver en metod för att automatisk detektera och separera permanenta och icke-permanenta märken. Den använder en snabb radial symmetri algoritm som en huvuddel i detektorn. Efter att kandidater av ansiktsmärken har tagits fram tas alla falska detektioner bort utifrån deras storlek, form och hårinnehåll. Resultaten visar att detektorn har en god känslighet men dålig precision. Eliminationsmetoderna av falska detektioner analyserades och olika kännetecken användes till klassificeraren. Det kan fastställas att färgen på ansiktsmärkena har en större betydelse än formen när det gäller att sortera dem i permanenta och icke-permanenta märken.
+När forensiker försöker identifiera förövaren till ett brott använder de individuella ansiktsmärken när de jämför den misstänkta med förövaren. Ansiktsmärken används ofta vid identifikation och de lokaliseras idag manuellt. För att skynda på denna process, är det önskvärt att detektera ansiktsmärken automatiskt. Detta examensarbete beskriver en metod för att automatisk detektera och separera permanenta och icke-permanenta ansiktsmärken. Den använder en snabb radial symmetri algoritm som en huvuddel i detektorn. Efter att kandidater av ansiktsmärken har tagits, sollas alla falska detektioner bort utifrån deras storlek, form och hårinnehåll. Resultaten visar att detektorn har en god känslighet men dålig precision. Eliminationsmetoderna av falska detektioner analyserades och olika kännetecken användes till klassificeraren. Det kan fastställas att färgen på ansiktsmärkena har en större betydelse än formen när det gäller att sortera dem i permanenta och icke-permanenta märken.
